--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@types/uuid": "^10.0.0",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
+    "firebase": "^11.6.0",
     "framer-motion": "^12.5.0",
     "immer": "^10.1.1",
     "lucide-react": "^0.485.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-force-graph": "^1.47.6",
+    "react-force-graph-2d": "^1.27.1",
+    "reactflow": "^11.11.4",
     "uuid": "^11.1.0",
     "zustand": "^5.0.3"
   },
